--- a/src/app/features/game/game/game.component.html
+++ b/src/app/features/game/game/game.component.html
@@ -1,265 +1,114 @@
-<div class="row">
-  <!-- Container for sidebar(s) + page content -->
-  <mat-sidenav-container style="height: 100vh">
-    <!--TODO il sidenav avrebbe [closeOnClickOutside]="true" -->
-    <!--! sidebar chat closed -->
-    <mat-sidenav [(opened)]="isGameChatSidebarOpen" [position]="'end'">
-      <div class="row">
-        <div class="col-12 fill-viewport-50 scrollable-div-y bg-white">
-          <!-- <app-game-tabs></app-game-tabs> -->
-          <!--TODO serve non lo abbiamo eliminato -->
-          <button
-            type="button"
-            style="position: absolute; right: 20px; top: 2px"
-            class="btn btn-sq-xs btn-danger"
-            (click)="toggleGameChatSidebar()">
-            &#10007;
-          </button>
-        </div>
-      </div>
-    </mat-sidenav>
+<div class="game">
+  <div class="players-name">
+    <p id="first-selected">Sofi</p>
+    <p>Matte</p>
+    <p>Klev</p>
+    <p id="second-selected">Fede</p>
+  </div>
+  
+  <!-- <mat-tab-group  id="tab-names">
+    <mat-tab label="Sofi" ><ng-template mat-tab-label>
+      <span class="first-team">Sofi</span></ng-template>
+    </mat-tab>
+    <mat-tab label="Matte" ><ng-template mat-tab-label>
+      <span class="second-team">Matte</span></ng-template>
+    </mat-tab>
+    <mat-tab label="Klev" class="first-team"><ng-template mat-tab-label>
+      <span class="first-team">Klev</span></ng-template>
+    </mat-tab>
+    <mat-tab label="Fede" class="second-team"><ng-template mat-tab-label>
+      <span class="second-team">Fede</span></ng-template>
+    </mat-tab>
+  </mat-tab-group> -->
+  <p class="normal-text">Ê il turno di: Matte</p>
 
-    <script>
-      console.log(
-        "current.usr" +
-          currentUser.connectionId +
-          "userTurn" +
-          game.userTurnToPlay.connectionId +
-          "n carte=" +
-          game.cardsPlayed.length
-      );
-    </script>
-    <!-- Page content -->
-    <div ng-sidebar-content>
-      <div class="col-12" style="margin-top: 5px">
-        <div class="fill-viewport-min-40">
-          <div class="row"></div>
-          <div class="col-4">
-            <button class="btn btn-danger btn-block" (click)="exitGame()">
-              Esci &#10007;
-            </button>
-          </div>
-          <div class="col-4">
-            <button
-              type="button"
-              class="btn btn-block btn-success"
-              [ngClass]="{
-                'chat-button-has-new-message': numberUnreadMessages > 0
-              }"
-              (click)="toggleGameChatSidebar()">
-              Chat 💬
-              <span
-                [hidden]="numberUnreadMessages === 0"
-                class="badge badge-light"
-                >{{ numberUnreadMessages }}</span
-              >
-            </button>
-          </div>
-          <!-- TODO logica per vedere ultima mano -->
-          <div class="col-4" hidden="????">
-            <button
-              class="btn btn-info btn-block"
-              triggers="manual"
-              placement="left"
-              popoverClass="popover-previous-cards"
-              (click)="showCardsPlayedPreviousRound()">
-              Ultima &#9776;
-            </button>
-          </div>
-          <!--TODO bottone per vedere utlima buggato <div class="col-4" [hidden]="game.cardsDrew.length > 0">
-          <button
-            class="btn btn-info btn-block"
-            triggers="manual"
-            placement="left"
-            popoverClass="popover-previous-cards"
-            (click)="showCardsPlayedPreviousRound()">
-            Ultima &#9776;
-          </button>
-          <!--TODO ngbPoopoer <button
-                class="btn btn-info btn-block"
-                #cardsPlayedPopover="ngbPopover"
-                triggers="manual"
-                placement="left"
-                [ngbPopover]="cardsPlayedPreviousRound"
-                popoverClass="popover-previous-cards"
-                (click)="showCardsPlayedPreviousRound()">
-                Ultima &#9776;
-              </button> -->
-          <!-- </div> -->
-        </div>
-        <div class="row" style="height: 3px"></div>
-        <div class="row">
-          <div class="col-12">
-            <!--TODO visualizza i giocatori <p class="text-center">
-              <span
-                *ngFor="let player of game.players"
-                [ngClass]="{
-                  'text-danger font-weight-bold':
-                    player.user.connectionId ===
-                    game.userTurnToPlay.connectionId,
-                  'text-uppercase':
-                    player.user.connectionId ===
-                    game.firstUserTurnToPlay.connectionId,
-                  team0: player.user.team !== 1 && !player.leftGame,
-                  team1: player.user.team === 1 && !player.leftGame,
-                  'left-game': player.leftGame
-                }">
-                &#9733; {{ player.user.name }} </span>&#9733;
-            </p> -->
-          </div>
-        </div>
+  <div id="table">
+  <div class="game-buttons">
+    <button id="esci" class="btn btn-danger btn-block game-button" (click)="exitGame()">
+      Esci &#10007;
+    </button>
+    <button id="chat"
+        type="button"
+        class="btn btn-block btn-success game-button"
+        [ngClass]="{
+          'chat-button-has-new-message': numberUnreadMessages > 0
+        }"
+        (click)="toggleGameChatSidebar()">
+        Chat 💬
+        <span
+          [hidden]="numberUnreadMessages === 0"
+          class="badge badge-light"
+          >{{ numberUnreadMessages }}</span
+        >
+      </button>
+      <button id="ultima"
+      class="btn btn-info btn-block game-button"
+      triggers="manual"
+      placement="left"
+      popoverClass="popover-previous-cards"
+      (click)="showCardsPlayedPreviousRound()">
+      Ultima &#9776;
+    </button>
+  </div>
+  <div class="cards-container">
+  <div class="wrap">
+    <img src="assets/images/4S.png" alt="4_spade" class="card"/>
+    <div class="player">Sofi</div>
+  </div>
+  <div class="wrap">
+    <img src="assets/images/4S.png" alt="4_spade" class="card"/>
+    <div class="player">Matte</div>
+  </div>
+  <div class="wrap">
+    <img src="assets/images/4S.png" alt="4_spade" class="card"/>
+    <div class="player">Klev</div>
+  </div>
+  <div class="wrap">
+    <img src="assets/images/4S.png" alt="4_spade" class="card"/>
+    <div class="player">Fede</div>
+  </div>
+</div>
+</div>
+<div class="select-container">
+  <mat-form-field class="custom-select">
+    <mat-label>Chiamata</mat-label>
+    <mat-select>
+      <mat-option *ngFor="let call of calls" [value]="call.value">
+        {{call.viewValue}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field> 
 
-        <!--TODO levato dal div sotto class="row"
-          [ngClass]="{
-            'player-background':
-              currentUser.connectionId === game.userTurnToPlay.connectionId
-          }" -->
-        <div>
-          <!--TODO tolto dal div tavolo id="tavolo"
-            [ngClass]="{
-              'text-center col-6': game.players.length === 2,
-              'text-center col-12': game.players.length === 4
-            }" -->
-          <div>
-            <div>
-              <!-- [hidden]="!(game.cardsPlayed.length === 0)"> -->
-              <div>
-                <!-- [hidden]="game.cardsPlayed.length !== 0"> -->
-                <!-- TODO logica e' il tuo turno 
-                  *ngIf="
-                    currentUser.connectionId ===
-                    game.userTurnToPlay.connectionId
-                  " -->
-                <p>&Egrave; il tuo turno!</p>
-                <!-- TODO logica e' il turno di 
-                  *ngIf="
-                    currentUser.connectionId !==
-                    game.userTurnToPlay.connectionId
-                  " -->
-                <!-- <p>&Egrave; il turno di: {{ game.userTurnToPlay.name }}</p> -->
-                <p>&Egrave; il turno di: Hero</p>
-                <hr />
-                <!-- <p>Partita ai {{ game.gameSetup.playUntilPoints }}</p> -->
-                <p>Partita ai 69</p>
-                <!-- <p *ngFor="let team of game.teams">
-                  <strong>{{ team.name }}</strong> punti:
-                  {{ team.calculatedPoints }}<br />
-                </p> -->
-              </div>
-            </div>
-            <!-- <app-card-player
-              [cardAndUser]="card"
-              [isPlayedCard]="true"
-              *ngFor="let card of game.cardsPlayed"></app-card-player> -->
-          </div>
-          <div>
-            <!-- TODO mostrare 
-                *ngIf="game.players.length === 2 -->
-            <div class="col-6" id="mazzo">
-            <!-- <div [hidden]="game.cardsDrew.length === 0">
-              <app-card-player
-                *ngFor="let cardDrew of game.cardsDrew"
-                [isPlayedCard]="true"
-                [cardAndUser]="cardDrew"></app-card-player>
--->
-            </div> 
-            <!-- TODO logica [hidden]="game.cardsDrew.length > 0" -->
-            <div>
-              <div
-                class="card deck-image-div"
-                triggers="manual"
-                placement="left"
-                popoverClass="popover-previous-cards"
-                (click)="showCardsPlayedPreviousRound()">
-                <!-- TODO hidden logic -->
-                <img
-                  class="card-img-top"
-                  src="assets/images/coverdeck/deckbackground.jpg" />
-                <!-- TODO hidden logic -->
-                <img
-                  class="card-img-top"
-                  src="assets/images/coverdeck/whitebackground.jpg" />
-                <div class="card-body" style="height: 25px">
-                  <!-- <p class="card-title text-center">{{ game.deckSize / 2 }}</p> -->
-                  <p class="card-title text-center">deckSize / 2</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!--se ho finito la partita mostro il bottone per rigiocarla con gli stessi partecipanti-->
+  <mat-form-field class="custom-select">
+    <mat-label>Briscola</mat-label>
+    <mat-select>
+      <mat-option *ngFor="let trump of trumps" [value]="trump.value">
+        {{trump.viewValue}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field> 
+</div>
+<div class="hand">
+  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
+  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
+  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
+  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
+  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
+  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
+  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
+  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
+  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
+  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
+</div>
 
-          <!--TODO logica per mostrare div sotto *ngIf="
-              game.gameEnded &&
-              game.players[0].user.connectionId === currentUser.connectionId
-            " -->
-          <div class="col-12 text-center" ngbDropdown>
-            <button class="btn btn-primary my-3" ngbDropdownToggle>
-              Rigioca la Partita
-            </button>
-            <div ngbDropdownMenu>
-              <button class="dropdown-item" (click)="replayGame(21)">
-                Ai 21
-              </button>
-              <button class="dropdown-item" (click)="replayGame(31)">
-                Ai 31
-              </button>
-              <button class="dropdown-item" (click)="replayGame(41)">
-                Ai 41
-              </button>
-              <button class="dropdown-item" (click)="replayGame(51)">
-                Ai 51
-              </button>
-            </div>
-          </div>
-          <!--fine bottone replay-->
-        </div>
-      </div>
-      <hr />
-      <div class="fill-viewport-min-50">
-        <div class="row">
-          <div class="col-12 p5">
-            <!-- TODO il for per mostrare la mano *ngFor="let card of game.myCards; let firstItem = first"
-              (click)="makeMove(card)"
-              [class.firstPlayedCard]="firstItem"
-              [ngClass]="getClassForCard(card)"
-              [src]="card.imageUrl" -->
-            <img class="player-hand-card animate" />
-          </div>
-        </div>
-      </div>
-
-      <ng-template #cardsPlayedPreviousRound>
-        <div class="col-12">
-          <p class="text-center text-primary">
-            Carte giocate nella mano precedente:
-          </p>
-          <app-card-player
-            [cardAndUser]="card"
-            *ngFor="
-              let card of game.cardsPlayedPreviousRound
-            "></app-card-player>
-          <div
-            [hidden]="
-              !cardsDrewPreviousRound || cardsDrewPreviousRound.length === 0
-            ">
-            <p class="text-center text-primary">
-              Carte estratte nella mano precedente:
-            </p>
-            <app-card-player
-              [cardAndUser]="card"
-              *ngFor="let card of cardsDrewPreviousRound"></app-card-player>
-          </div>
-        </div>
-      </ng-template>
-
-      <div
+      <!-- <div
         ngbDropdown
         placement="top-left"
         class="d-inline-block action-button-left">
-        <!-- TODO logica visual *ngIf=" currentUser.connectionId ===
+        /* TODO logica visual *ngIf=" currentUser.connectionId ===
         game.userTurnToPlay.connectionId && game.isFirstRound &&
-        game.cardsPlayed.length === 0 " -->
-        <button
+        game.cardsPlayed.length === 0 "*/ -->
+        <!-- <button
           class="btn btn-success"
           id="callbriscoladropdown"
           ngbDropdownToggle>
@@ -280,11 +129,13 @@
           </button>
         </div>
       </div>
+    <div>
 
+    </div>
       <div
         ngbDropdown
         placement="top-right"
-        class="d-inline-block action-button">
+        class="d-inline-block action-button"> -->
         <!--button class="btn btn-primary" id="callactiondropdown" *ngIf="currentUser.connectionId==game.userTurnToPlay.connectionId && game.cardsPlayed.length==0 && !selectingCardsForExtraPoints" ngbDropdownToggle-->
 
         <!-- TODO logic visual 
@@ -293,14 +144,14 @@
               game.cardsPlayed.length === 0 &&
               !game.roundEnded
             " -->
-        <button
+        <!-- <button
           class="btn btn-primary"
           id="callactiondropdown"
           ngbDropdownToggle>
           Chiamata
         </button>
         <div ngbDropdownMenu aria-labelledby="callactiondropdown">
-          <!--Cambio le azioni: busso, striscio, ristriscio,volo -->
+          /*Cambio le azioni: busso, striscio, ristriscio,volo */
           <button class="dropdown-item" (click)="CallAction('BUSSO')">
             Busso
           </button>
@@ -320,6 +171,5 @@
           </button>
         </div>
       </div>
-    </div>
-  </mat-sidenav-container>
-</div>
+
+</div> --> 
