--- a/src/app/features/waiting-room/waiting-room-component/waiting-room-component.component.css
+++ b/src/app/features/waiting-room/waiting-room-component/waiting-room-component.component.css
@@ -61,13 +61,13 @@
   }
 
   .teamA-box{
-    background-color: #63CCCA;/*#007EA8;*/
+    background-color: #00a3f5;/*#007EA8;*/
   }
 
   .teamB-box{
     background-color: #f19a3e;
   }
-  
+
   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
