--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -2,10 +2,10 @@
   class="container login-container"
   fxLayout="row"
   fxLayoutAlign="center center">
-  <form [formGroup]="loginForm" fxFlex="30%" fxFlex.sm="50%" fxFlex.xs="90%">
-    <mat-card>
-      <mat-card-title>{{ this.name }}</mat-card-title>
-      <mat-card-subtitle>Log in al tuo profilo</mat-card-subtitle>
+  <form [formGroup]="loginForm">
+    <mat-card class="auth-card">
+      <mat-card-title class="auth-title login-title">{{ this.name }}</mat-card-title>
+      <mat-card-subtitle class="subtitle">Log in al tuo profilo</mat-card-subtitle>
       <mat-card-content>
         <mat-form-field class="full-width">
           <input
@@ -14,6 +14,7 @@
             placeholder="Nome Utente"
             formControlName="nickname"
             autocomplete="name"
+            class="login-input"
             type="text" />
 
           <!-- <mat-error
@@ -36,6 +37,7 @@
             placeholder="Password"
             formControlName="password"
             type="password"
+            class="login-input"
             autocomplete="current-password" />
           <mat-error
             id="requiredPasswordError"
@@ -47,22 +49,25 @@
 
         <div class="full-width">
           <mat-slide-toggle formControlName="rememberMe"
-            >Remember my email address</mat-slide-toggle
+            >Ricordami</mat-slide-toggle
           >
         </div>
       </mat-card-content>
-
-      <mat-card-actions class="login-actions">
-        <button
-          mat-raised-button
-          id="registerBtn"
-          color="primary"
-          (click)="registerUser()">
-          Registrati
+      <div class="right-container">
+      <button
+          mat-button
+          id="resetPassword"
+          class="normal-link"
+          (click)="resetPassword()"
+          type="button">
+          Reset Password
         </button>
+      </div>
+      <mat-card-actions class="login-actions">
+        
         <button
           mat-raised-button
-          id="login"
+          id="login-button"
           color="primary"
           [disabled]="loginForm.invalid || loading"
           (click)="login()">
@@ -70,14 +75,8 @@
         </button>
         <button
           mat-button
-          id="resetPassword"
-          (click)="resetPassword()"
-          type="button">
-          Reset Password
-        </button>
-        <button
-          mat-button
           id="guestLogin"
+          class="normal-link"
           (click)="guestAccess()"
           type="button">
           Entra come ospite
@@ -88,8 +87,15 @@
           id="guestLogin"
           (click)="guestAccessFunny()"
           *ngIf="this.funny"
+          class="normal-link"
           type="button">
           Entra come ospite Divertente
+        </button>
+        <button
+          mat-button
+          id="registerBtn"
+          (click)="registerUser()">
+          Registrati
         </button>
       </mat-card-actions>
     </mat-card>
