--- a/src/app/features/auth/login/login.component.css
+++ b/src/app/features/auth/login/login.component.css
@@ -69,7 +69,7 @@
 /*input placeholder*/
 ::ng-deep .full-width .mat-form-field-label{
     padding-left: 5%;
-    padding-bottom: 5%;
+    padding-bottom: 15%;
  }
 
 ::ng-deep .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb{
@@ -85,7 +85,7 @@
     color: #007EA8 !important;
 }
   
-::ng-deep.mat-form-field-underline {
+::ng-deep .login .mat-form-field-underline {
     /*change color of underline*/
     background-color: #007EA8 !important;
 } 
@@ -95,7 +95,4 @@
    background-color: #007EA8 !important;
   }
 
-/* .login-input, .mat-tab-label, .mat-tab-label.mat-tab-label-active, .mat-form-field.mat-focused .mat-form-field-label{
-    color: #0163A1 !important;
-} */
 
