--- a/src/app/features/game/game/game.component.html
+++ b/src/app/features/game/game/game.component.html
@@ -5,7 +5,7 @@
     <p>Klev</p>
     <p id="second-selected">Fede</p>
   </div>
-  
+
   <!-- <mat-tab-group  id="tab-names">
     <mat-tab label="Sofi" ><ng-template mat-tab-label>
       <span class="first-team">Sofi</span></ng-template>
@@ -23,11 +23,15 @@
   <p class="normal-text">Ê il turno di: Matte</p>
 
   <div id="table">
-  <div class="game-buttons">
-    <button id="esci" class="btn btn-danger btn-block game-button" (click)="exitGame()">
-      Esci &#10007;
-    </button>
-    <button id="chat"
+    <div class="game-buttons">
+      <button
+        id="esci"
+        class="btn btn-danger btn-block game-button"
+        (click)="exitGame()">
+        Esci &#10007;
+      </button>
+      <button
+        id="chat"
         type="button"
         class="btn btn-block btn-success game-button"
         [ngClass]="{
@@ -35,60 +39,64 @@
         }"
         (click)="toggleGameChatSidebar()">
         Chat 💬
-        <span
-          [hidden]="numberUnreadMessages === 0"
-          class="badge badge-light"
-          >{{ numberUnreadMessages }}</span
-        >
+        <span [hidden]="numberUnreadMessages === 0" class="badge badge-light">{{
+          numberUnreadMessages
+        }}</span>
       </button>
-      <button id="ultima"
-      class="btn btn-info btn-block game-button"
-      triggers="manual"
-      placement="left"
-      popoverClass="popover-previous-cards"
-      (click)="showCardsPlayedPreviousRound()">
-      Ultima &#9776;
-    </button>
+      <button
+        id="ultima"
+        class="btn btn-info btn-block game-button"
+        triggers="manual"
+        placement="left"
+        popoverClass="popover-previous-cards"
+        (click)="showCardsPlayedPreviousRound()">
+        Ultima &#9776;
+      </button>
+    </div>
+    <div class="cards-container">
+      <div class="wrap">
+        <img src="assets/images/4S.png" alt="4_spade" class="card" />
+        <div class="player">Sofi</div>
+      </div>
+      <div class="wrap">
+        <img src="assets/images/4S.png" alt="4_spade" class="card" />
+        <div class="player">Matte</div>
+      </div>
+      <div class="wrap">
+        <img src="assets/images/4S.png" alt="4_spade" class="card" />
+        <div class="player">Klev</div>
+      </div>
+      <div class="wrap">
+        <img src="assets/images/4S.png" alt="4_spade" class="card" />
+        <div class="player">Fede</div>
+      </div>
+    </div>
   </div>
-  <div class="cards-container">
-  <div class="wrap">
-    <img src="assets/images/4S.png" alt="4_spade" class="card"/>
-    <div class="player">Sofi</div>
-  </div>
-  <div class="wrap">
-    <img src="assets/images/4S.png" alt="4_spade" class="card"/>
-    <div class="player">Matte</div>
-  </div>
-  <div class="wrap">
-    <img src="assets/images/4S.png" alt="4_spade" class="card"/>
-    <div class="player">Klev</div>
-  </div>
-  <div class="wrap">
-    <img src="assets/images/4S.png" alt="4_spade" class="card"/>
-    <div class="player">Fede</div>
-  </div>
-</div>
-</div>
-<div class="select-container">
-  <mat-form-field class="custom-select">
-    <mat-label>Chiamata</mat-label>
-    <mat-select>
-      <mat-option *ngFor="let call of calls" [value]="call.value">
-        {{call.viewValue}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field> 
+  <div class="select-container">
+    <mat-form-field class="custom-select">
+      <mat-label>Chiamata</mat-label>
+      <mat-select>
+        <mat-option *ngFor="let call of calls" [value]="call.value">
+          {{ call.viewValue }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
-  <mat-form-field class="custom-select">
-    <mat-label>Briscola</mat-label>
-    <mat-select>
-      <mat-option *ngFor="let trump of trumps" [value]="trump.value">
-        {{trump.viewValue}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field> 
-</div>
-<div class="hand">
+    <mat-form-field class="custom-select">
+      <mat-label>Briscola</mat-label>
+      <mat-select>
+        <mat-option *ngFor="let trump of trumps" [value]="trump.value">
+          {{ trump.viewValue }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="hand" *ngFor="let item of this.cards; index as i">
+    <img
+      src="https://cataas.com/cat?width=196&height=392&/{{ i }}"
+      alt="4_spade"
+      class="hand-card" />
+    <!-- <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
   <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
   <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
   <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
@@ -97,18 +105,17 @@
   <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
   <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
   <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
-  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
-  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/>
-</div>
+  <img src="assets/images/4S.png" alt="4_spade" class="hand-card"/> -->
+  </div>
 
-      <!-- <div
+  <!-- <div
         ngbDropdown
         placement="top-left"
         class="d-inline-block action-button-left">
         /* TODO logica visual *ngIf=" currentUser.connectionId ===
         game.userTurnToPlay.connectionId && game.isFirstRound &&
         game.cardsPlayed.length === 0 "*/ -->
-        <!-- <button
+  <!-- <button
           class="btn btn-success"
           id="callbriscoladropdown"
           ngbDropdownToggle>
@@ -136,15 +143,15 @@
         ngbDropdown
         placement="top-right"
         class="d-inline-block action-button"> -->
-        <!--button class="btn btn-primary" id="callactiondropdown" *ngIf="currentUser.connectionId==game.userTurnToPlay.connectionId && game.cardsPlayed.length==0 && !selectingCardsForExtraPoints" ngbDropdownToggle-->
+  <!--button class="btn btn-primary" id="callactiondropdown" *ngIf="currentUser.connectionId==game.userTurnToPlay.connectionId && game.cardsPlayed.length==0 && !selectingCardsForExtraPoints" ngbDropdownToggle-->
 
-        <!-- TODO logic visual 
+  <!-- TODO logic visual 
         *ngIf="
               currentUser.connectionId === game.userTurnToPlay.connectionId &&
               game.cardsPlayed.length === 0 &&
               !game.roundEnded
             " -->
-        <!-- <button
+  <!-- <button
           class="btn btn-primary"
           id="callactiondropdown"
           ngbDropdownToggle>
@@ -172,4 +179,5 @@
         </div>
       </div>
 
-</div> --> 
+</div> -->
+</div>
