feat: slideUP working fine, now CSS is my biggest enemy

--- a/src/app/features/game/draggable-image-component/draggable-image-component.html
+++ b/src/app/features/game/draggable-image-component/draggable-image-component.html
@@ -1,4 +1,3 @@
-<!-- <p>draggable-image-component works!</p> -->
 <!-- draggable-image.component.html -->
 <div
   class="draggable"
@@ -9,8 +8,9 @@
     top: position.y + 'px',
     left: position.x + 'px',
     opacity: hidden ? 0 : 1,
-    transition: 'top 0.5s, opacity 0.5s'
+    transform: hidden ? 'translateY(-100px)' : 'translateY(0)',
+    transition: 'transform 0.5s, opacity 0.5s'
   }"
-  *ngIf="!hidden">
+  (transitionend)="onTransitionEnd()">
   <img [src]="src" alt="Draggable Image" />
 </div>
