--- a/src/app/features/game/draggable-image-component/draggable-image-component.css
+++ b/src/app/features/game/draggable-image-component/draggable-image-component.css
@@ -2,6 +2,9 @@
   /* position: absolute; */
   cursor: grab;
   transition: top 0.5s, opacity 0.5s;
+  display: inline-block;
+  margin: 1%;
+  border-radius: 10px;
 
 }
 
