--- a/src/app/features/game/draggable-image-component/draggable-image-component.html
+++ b/src/app/features/game/draggable-image-component/draggable-image-component.html
@@ -13,4 +13,5 @@
   }"
   (transitionend)="onTransitionEnd()">
   <img [src]="src" alt="Draggable Image" />
+  <div class="readable">{{alt}}</div>
 </div>
