--- a/src/app/features/game/draggable-image-component/draggable-image-component.css
+++ b/src/app/features/game/draggable-image-component/draggable-image-component.css
@@ -29,15 +29,16 @@
   border-style: solid;
   border-width: 0 1px 1px 1px;
   color: white;
+  background-color: #000000;
 }
 
 
-.cards-container .wrap:nth-child(even) .readable{
+/* .hand-container {
   background-color: #f19a3e;
   color: white;
 }
 
-.cards-container .wrap:nth-child(odd) .readable{
+.hand-container .readable:nth-child(odd) {
   background-color:#00a3f5;
   color: white;
-}
+} */
