fix: improved real time waiting room component

--- a/src/app/features/waiting-room/waiting-room-component/waiting-room-component.component.html
+++ b/src/app/features/waiting-room/waiting-room-component/waiting-room-component.component.html
@@ -8,6 +8,9 @@
         </p>
         <!--sostituire "In attesa di altri giocatori" con la variabile status-->
         <p class="lighter-text">
+          Modalità : <span class="normal-text">{{ mode }}</span>
+        </p>
+        <p class="lighter-text">
           Partita ai: <span class="normal-text">{{ score }}</span>
         </p>
         <p class="lighter-text">Partecipanti:</p>
